--- a/news.html
+++ b/news.html
@@ -8,9 +8,56 @@
     <link href="lib/hplus/css/style.css" type="text/css" rel="stylesheet"/>
     <link href="lib/hplus/css/animate.min.css" type="text/css" rel="stylesheet"/>
 </head>
-<body>
+<body class="gray-bg">
 <div class="row">
-    <div class="col-sm-12">sdf</div>
+    <div class="col-sm-12">
+        <div class="ibox float-e-margins">
+            <div class="ibox-content">
+                <div>
+                    <span class="pull-right">
+                        <button class="btn btn-danger" type="button">发布新闻</button>
+                    </span>
+
+                    <h1 class="m-b-xs">新闻管理</h1>
+
+                    <div class="border-bottom">
+                        <form class="form-horizontal" role="form" action="" method="post" style="border:gray 1px;">
+                            <fieldset>
+                                <legend class="pull-left">搜索新闻</legend>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">标题</label>
+
+                                    <div class="col-sm-4">
+                                        <input class="form-control" type="text" name="title" placeholder="请输入标题">
+                                    </div>
+
+                                    <label class="col-sm-2 control-label">标签</label>
+
+                                    <div class="col-sm-4">
+                                        <input class="form-control" type="text" name="tags" placeholder="请选择标签">
+                                    </div>
+
+                                    <label class="col-sm-2 control-label">内容</label>
+
+                                    <div class="col-sm-4">
+                                        <input class="form-control" type="text" name="content"
+                                               placeholder="请输入内容片段">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                <span class="pull-right">
+                                    <button class="btn btn-success" type="button">搜索</button>
+                                    <button class="btn btn-default" type="button">重置</button>
+                                </span>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- 全局js -->
