add the dt-grid to news-mgr page.

--- a/news.html
+++ b/news.html
@@ -59,7 +59,10 @@
                         </form>
                     </div>
                     <!--搜索END-->
-
+                    <div class="wrapper">
+                   <div id="dtGridContainer" class="dt-grid-container"></div>
+                   <div id="dtGridToolBarContainer" class="dt-grid-toolbar-container"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -74,10 +77,12 @@
 <script src="lib/hplus/js/plugins/layer/layer.min.js"></script>
 <script src="lib/dtgrid/js/jquery.dtGrid.js"></script>
 <script src="lib/dtgrid/i18n/zh-cn.js"></script>
+<script src="static/js/news-mgr.js"></script>
 
 <!-- 自定义js -->
 <script src="lib/hplus/js/hplus.min.js?v=3.0.0"></script>
 <script type="text/javascript" src="lib/hplus/js/contabs.min.js"></script>
+
 
 <!-- 第三方插件 -->
 <script src="lib/hplus/js/plugins/pace/pace.min.js"></script>
